--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@emotion/styled": "^11.8.1",
     "@faker-js/faker": "^6.1.2",
     "@iconify/react": "^3.2.1",
+    "@mui/icons-material": "^5.6.2",
     "@mui/lab": "^5.0.0-alpha.77",
     "@mui/material": "^5.6.1",
     "@mui/x-date-pickers": "^5.0.0-alpha.2",
@@ -61,6 +62,7 @@
     "react-scripts": "^5.0.0",
     "simplebar": "^5.3.6",
     "simplebar-react": "^2.3.6",
+    "use-file-picker": "^1.4.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
