--- a/package.json
+++ b/package.json
@@ -57,9 +57,12 @@
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.2",
+    "react-drag-drop-files": "^2.3.5",
     "react-helmet-async": "^1.3.0",
+    "react-notifications-component": "^4.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
+    "react-toastify": "^9.0.1",
     "simplebar": "^5.3.6",
     "simplebar-react": "^2.3.6",
     "use-file-picker": "^1.4.2",
