--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.4.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-drag-drop-files": "^2.3.5",
     "react-helmet-async": "^1.3.0",
